# boofunc

./: .gitignore  CONTRIBUTING.md  README.md  launch.json  pyproject.toml
docs/source/: boolfunc.analysis.rst  boolfunc.core.rst  conf.py  index.rst  modules.rst
src/boolfunc/: __init__.py  api.py
src/boolfunc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/boolfunc/core/: __init__.py  adapters.py  base.py  builtins.py  errormodels.py  factory.py  spaces.py
src/boolfunc/core/representations/: __init__.py  base.py  factory.py  fourier_expansion.py  multi_linear.py  polynomial.py  registry.py  symbolic.py  truth_table.py
src/boolfunc/spaces/: spaces.py
src/boolfunc/utils/: exceptions.py
tests/integration/: test_base_and_rep.py
tests/unit/: test_base.py  test_representations.py
